--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -33,3 +33,52 @@ footer{
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
+section{
+    padding: 20px;
+}
+
+form{
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+form label{
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    color: #010e04;
+}
+
+form select, form textarea, form input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    margin-bottom: 20px;
+}
+
+form button {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #fff;
+    background-color: #60ce54;
+    border: 1px solid #60ce54;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #010e04;
+    border: 1px solid #010e04;
+}
