--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -18,6 +18,43 @@ header{
     text-align: center;
 }
 
+nav{
+    text-align: center;
+    max-width: 500px;
+    margin-top: 20px;
+}
+
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav li{
+    display: inline-block;
+    margin: 0 10px;
+    vertical-align: middle;
+}
+
+nav a {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #fff;
+    background-color: #60ce54;
+    border: 1px solid #60ce54;
+    border-radius: 0.25rem;
+}
+
+nav a:hover {
+    background-color: #010e04;
+    border: 1px solid #010e04;
+}
+
 header h1{
     font-size: 30px;
     font-weight: 700;
