--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -124,3 +124,9 @@ section.imagen{
     display: flex;
     justify-content: center;
 }
+
+section.imagen img{
+    width: 30%;
+    max-width: 500px;
+    height: auto;
+}
