--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -18,6 +18,14 @@ header{
     text-align: center;
 }
 
+header2{
+    background-color: hsl(130, 76%, 67%);
+    padding: 20px 0;
+    border-bottom: 1px solid #e3e3e3;
+    text-align: center;
+    margin-top: 20px;
+}
+
 nav{
     text-align: center;
     max-width: 500px;
