--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -21,7 +21,7 @@ header{
 header2{
     background-color: hsl(130, 76%, 67%);
     padding: 20px 0;
-    border-bottom: 1px solid #e3e3e3;
+    border-bottom: 1px solid #e46666;
     text-align: center;
     margin-top: 20px;
 }
