--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -18,8 +18,8 @@ header{
     text-align: center;
 }
 
-header2{
-    background-color: hsl(130, 76%, 67%);
+main{
+    background-color: hsl(0, 71%, 64%);
     padding: 20px 0;
     border-bottom: 1px solid #e46666;
     text-align: center;
