--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -155,3 +155,8 @@ section.mejores {
     justify-content: center;
     flex-wrap: wrap;
 }
+section.mejores img{
+    width: 30%;
+    max-width: 500px;
+    height: auto;
+}
