--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #91f7a0;
+    background-color: #ecbbaa;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -12,23 +12,24 @@ body{
 }
 
 header{
-    background-color: #60ce54;
+    background-color: #e32525;
     padding: 20px 0;
-    border-bottom: 1px solid #e3e3e3;
     text-align: center;
 }
 
 main{
-    background-color: hsl(0, 71%, 64%);
+    background-color: #e32525;
     padding: 20px 0;
     border-bottom: 1px solid #e46666;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .centro-nav{
     text-align: center;
     margin: 20px auto;
+    max-width: 500px;
+    margin-top: 20px;
 }
 
 
@@ -36,12 +37,16 @@ main{
     margin: 0;
     padding: 0;
     list-style: none;
+    max-width: 500px;
+    margin-top: 20px;
 }
 
 .centro-nav li{
     display: inline-block;
     margin: 0 10px;
     vertical-align: middle;
+    max-width: 500px;
+    margin-top: 20px;
 }
 
 .centro-nav a {
@@ -53,9 +58,11 @@ main{
     font-weight: 700;
     line-height: 1.5;
     color: #fff;
-    background-color: #60ce54;
+    background-color: #0a0200;
     border: 1px solid #60ce54;
     border-radius: 0.25rem;
+    max-width: 500px;
+    margin-top: 20px;
 }
 
 .centro-nav a:hover {
