--- a/archivos_proyecto/css/style.css
+++ b/archivos_proyecto/css/style.css
@@ -30,6 +30,7 @@ main{
     margin: 20px auto;
     max-width: 500px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
@@ -39,6 +40,7 @@ main{
     list-style: none;
     max-width: 500px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .centro-nav li{
@@ -47,6 +49,7 @@ main{
     vertical-align: middle;
     max-width: 500px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .centro-nav a {
@@ -63,6 +66,7 @@ main{
     border-radius: 0.25rem;
     max-width: 500px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .centro-nav a:hover {
@@ -77,7 +81,7 @@ header h1{
 }
 
 footer{
-    background-color: #60ce54;
+    background-color: #5312077a;
     padding: 20px 0;
     border-top: 1px solid #e3e3e3;
     text-align: center;
